Added purity report parts no javadoc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="password">Password</string>
     <string name="SubmitWaterReport">Submit Water Source Report</string>
     <string name="sourceReportSubmitError">Missing one or more fields.</string>
+    <string name="SubmitWaterPurityReport">Submit Water Purity Report</string>
+    <string name="purityReportSubmitError">Missing one or more fields.</string>
     <string name="nav_source">Source</string>
 
     <!-- TODO: Remove or change this placeholder text -->
